style: чуть поправил стиль кода