@@ -2,24 +2,17 @@ package kz.tamoha.vkbotmaven.command;
 
 import api.longpoll.bots.exceptions.VkApiException;
 import api.longpoll.bots.methods.impl.messages.Send;
-import api.longpoll.bots.model.events.messages.MessageEvent;
-import api.longpoll.bots.model.objects.additional.EventData;
 import api.longpoll.bots.model.objects.additional.Keyboard;
 import api.longpoll.bots.model.objects.additional.buttons.Button;
 import api.longpoll.bots.model.objects.additional.buttons.CallbackButton;
-import api.longpoll.bots.model.objects.additional.buttons.TextButton;
 import api.longpoll.bots.model.objects.basic.Message;
-import api.longpoll.bots.model.response.IntegerResponseBody;
 import kz.tamoha.vkbotmaven.command.api.annotation.CommandAnnotation;
 import kz.tamoha.vkbotmaven.command.api.impl.AbstractCommand;
 import kz.tamoha.vkbotmaven.command.api.model.CacheDataMessage;
 import kz.tamoha.vkbotmaven.model.basic.User;
 import kz.tamoha.vkbotmaven.model.media.MessageTextData;
 
-
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 
@@ -27,10 +20,10 @@ import java.util.List;
 public class Marry extends AbstractCommand {
     @Override
     public void run(CacheDataMessage cache, Message message, List<Message> replyMessages, String[] args) throws VkApiException {
-        String fullName=cache.getSender().getFullName().get(4).getPush();
-        String replySenderFullName=cache.getReplySenders().get(0).getFullName().get(0).getPush();
-        User sender=cache.getSender();
-        User replySender=cache.getReplySenders().get(0);
+        String fullName = cache.getSender().getFullName().get(4).getPush();
+        String replySenderFullName = cache.getReplySenders().get(0).getFullName().get(0).getPush();
+        User sender = cache.getSender();
+        User replySender = cache.getReplySenders().get(0);
 
 
         try {
@@ -45,14 +38,14 @@ public class Marry extends AbstractCommand {
         }
     }
 
-    public void sendCallbackButton(int peerId, String replySenderFullName,  String fullName) throws VkApiException {
+    public void sendCallbackButton(int peerId, String replySenderFullName, String fullName) throws VkApiException {
         List<Button> buttons = new ArrayList<>();
         // button 1
         buttons.add(new CallbackButton(Button.Color.POSITIVE, new CallbackButton.Action("Да", null)));
         // button 2
         buttons.add(new CallbackButton(Button.Color.NEGATIVE, new CallbackButton.Action("Нет", null)));
 
-        Keyboard keyboard = new Keyboard(Arrays.asList(buttons))
+        Keyboard keyboard = new Keyboard(List.of(buttons))
                 .setInline(true);
 
         Send.ResponseBody responseBody = vk.messages.send()
